fix: z-index for the form, it was block by the wavy

--- a/src/views/Register/index.scss
+++ b/src/views/Register/index.scss
@@ -7,6 +7,7 @@
   margin-left: 14%;
   color: $text;
   font-family: $font;
+  user-select: none;
 
   @media screen and (max-width: 1024px) {
     margin-top: 13%;
@@ -21,6 +22,7 @@
   .registerTitle {
     position: relative;
     font-weight: bolder;
+    z-index: 1;
     font-size: 35px;
     margin-block-end: 0;
     left: 70px;
@@ -29,6 +31,7 @@
   .registerText {
     color: $grey;
     font-size: 20px;
+    z-index: 1;
 
     left: 70px;
     top: 18px;
@@ -57,6 +60,7 @@
     justify-content: center;
     align-items: center;
     user-select: none;
+    z-index: 1;
 
     background-color: $bg;
 
@@ -76,6 +80,7 @@
     input {
       width: 80%;
       height: 60px;
+      z-index: 1;
 
       background-color: $bg;
       border: 1.5px $grey solid;
@@ -99,6 +104,7 @@
       margin: 2.5%;
       width: 180px;
       height: 60px;
+      z-index: 1;
 
       background-color: $links;
       border: 1px $links solid;
@@ -156,6 +162,7 @@
       align-items: center;
       width: 100%;
       padding-top: 24px;
+      z-index: 1;
 
       button {
         width: 60px;
@@ -185,6 +192,7 @@
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
+    z-index: 0;
 
     .wavy {
       width: 50%;
